# vibe-db-optimizer-agent

./: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT-LOG.md  LICENSE  PROJECT-DEVELOPMENT-PHASE-TRACKING.md  PROJECT-detail.md  README.md  SECOND-KNOWLEDGE-BRAIN.md  SECURITY.md  docker-compose.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docker/: init-mysql.sql  init-pg.sql
src/: config.ts  index.ts  types.ts
src/agents/: orchestrator.ts
src/agents/explain-analyzer/: index.ts
src/agents/index-advisor/: index.ts
src/agents/knowledge-updater/: index.ts
src/agents/load-test-runner/: index.ts
src/agents/partition-advisor/: index.ts
src/agents/schema-parser/: index.ts
src/agents/slow-query-ranker/: index.ts
src/cli/: index.ts
src/ml/: chroma-setup.py
src/ml/anomaly-detector/: main.py
src/ml/cardinality-estimator/: main.py
src/ml/query-classifier/: main.py
src/prompts/: dba-system-prompt.md  explain-analysis.md  index-recommendation.md
src/tools/: arxiv-crawler.ts  db-connector.ts  k6-runner.ts  llm-client.ts  report-generator.ts
src/types/: index.ts
tests/fixtures/: sample.prisma  sample_schema.sql
tests/fixtures/sample_explain_outputs/: mysql_full_scan.json  pg_estimation_error.json  pg_hash_join_spill.json  (+2 more)
