[project]
name = "vibe-db-optimizer-agent"
version = "0.1.0"
description = "Python sidecar for ML components"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "chromadb>=0.5.0",
    "transformers>=4.47.0",
    "torch>=2.5.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.3.0",
    "joblib>=1.4.0",
    "numpy>=2.1.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
